static & css & 부트스트랩

--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -1,16 +1,33 @@
-<!--
-    파이보에 필요한 템플릿 문법
-    https://docs.djangoproject.com/en/3.0/topics/templates/
--->
+{% load static %}
+<link rel='stylesheet' type='text/css' href='{% static 'css/bootstrap.min.css' %}'
 
-{% if question_list %}
-    <ul>
-        {% for question in question_list %}
-        <!-- <li><a href='/pybo/{{ question.id }}/'>{{ question.subject }}</a></li>
-        이렇게 하드코딩하면 나중에 페이지 구조가 바뀌어 url이 바뀌면 일일이 찾아서 변경해주어야 한다. -->
-            <li><a href='{% url 'pybo:detail' question.id %}'>{{ question.subject }}</a></li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <p>질문이 없습니다.</p>
-{% endif %}
+<div class='container my-3'>
+    <table class='table'>
+        <thead>
+            <tr class='thead-dark'>
+                <th>번호</th>
+                <th>제목</th>
+                <th>작성일시</th>
+            </tr>
+        </thead>
+        <tbody>                        
+            {% if question_list %}
+                {% for question in question_list %}
+                <tr>
+                    <td>{{ forloop.counter }}</td>
+                    <td>
+                        <!-- <a href='/pybo/{{ question.id }}/'>{{ question.subject }}</a>
+                        이렇게 하드코딩하면 나중에 페이지 구조가 바뀌어 url이 바뀌면 일일이 찾아서 변경해주어야 한다. -->
+                        <a href='{% url 'pybo:detail' question.id %}'>{{ question.subject }}</a>
+                    </td>
+                    <td>{{ question.create_date }}</td>
+                </tr>
+                {% endfor %}
+            {% else %}
+                <tr>
+                    <td colspan='3'>질문이 없습니다.</td>
+                </tr>
+            {% endif %}
+        </tbody>
+    </table>
+</div>
