--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -1,21 +1,41 @@
-<h1>{{ question.subject }}</h1>
+{% load static %}
+<link rel='stylesheet' type='text/css' href="{% static 'css/bootstrap.min.css' %}">
 
-<div>
-    {{ question.content }}
+<div class='container my-3'>
+    <h2 class='border-bottom py-2'>{{ question.subject }}</h2>
+
+    <div class='card my-3'>
+        <div class='card-text' style='white-space: pre-line;'>{{ question.content }}</div>
+        <div class='d-flex justify-content-end'>
+            <div class='badge badge-light p-2'>
+                {{ question.create_date }}
+            </div>
+        </div>
+    </div>
+
+    <h5 class='border-bottom my-3 py-2'>{{ question.answer_set.count }}개의 답변이 있습니다.</h5>
+ 
+    {% for answer in question.answer_set.all %}
+        <div class='card my-3'>
+            <div class='card-body'>
+                    <div class='card-text' style='white-space: pre-line;'>{{ answer.content }}</div>
+                    <div class='d-flex justify-content-end'>
+                        <div class='badge badge-light p-2'>
+                            {{ answer.create_date }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+
+    <form action="{% url 'pybo:answer_create' question.id %}" method='post'>
+        {% csrf_token %}
+        <!-- form으로 전송한 데이터가 실제 웹 페이지에서 작성한 데이터인지를 판단해 주는 가늠자 역할을 한다.
+        csrf토큰을 사용하기위해서는 미들웨어가 필요한데 Django에는 이미 MIDDLWARE가 settings에 포함되어있기 때문에 별도로 추가할 필요는 없다.-->
+        <div class='form-group'>
+            <textarea name='content' id='content' row='10' class='form-control'></textarea>
+        </div>
+        <input type='submit' vale='답변등록' class='btn btn-primary'>
+    </form>
 </div>
-
-<h5>{{ question.answer_set.count }}개의 답변이 있습니다.</h5>
-<div>
-    <ul>
-        {% for answer in question.answer_set.all %}
-            <li>{{ answer.content }}</li>
-        {% endfor %}
-    </ul>
-</div>
-
-<form action="{% url 'pybo:answer_create' question.id %}" method='post'>
-    {% csrf_token %} <!-- form으로 전송한 데이터가 실제 웹 페이지에서 작성한 데이터인지를 판단해 주는 가늠자 역할을 한다.
-    csrf토큰을 사용하기위해서는 미들웨어가 필요한데 Django에는 이미 MIDDLWARE가 settings에 포함되어있기 때문에 별도로 추가할 필요는 없다.-->
-    <textarea name='content' id='content' row='15'></textarea>
-    <input type='submit' vale='답변등록'>
-</form>
