--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -1,6 +1,5 @@
-{% load static %}
-<link rel='stylesheet' type='text/css' href="{% static 'css/bootstrap.min.css' %}">
-
+{% extends 'base.html' %}
+{% block content %}
 <div class='container my-3'>
     <h2 class='border-bottom py-2'>{{ question.subject }}</h2>
 
@@ -39,3 +38,4 @@
         <input type='submit' vale='답변등록' class='btn btn-primary'>
     </form>
 </div>
+{% endblock %}
