폼(form)을 이용한 질문 답변 등록

--- a/templates/pybo/question_form.html
+++ b/templates/pybo/question_form.html
@@ -5,8 +5,38 @@
     <form method="post">
         <!-- action을 지정하지 않으면 현재 페이지의 URL이 디폴트 action으로 설정된다. -->
         <!-- 또한 action속성을 지정하면 다른 템플릿에서는 활용할 수 없게 된다. -->
+        
         {% csrf_token %}
-        {{ form.as_p }} <!-- QuestionForm 객체의 subject, content속성에 해당하는 HTML코드를 자동으로 생성함 -->
+
+        <!-- {{ form.as_p }} <!-- QuestionForm 객체의 subject, content속성에 해당하는 HTML코드를 자동으로 생성함 -->
+
+        <!-- 수동으로 폼 HTML 작성하기 Start -->
+        <!-- 오류표시 Start -->
+        {% if form.errors %}
+        <div class='alert alert-danger' role='alert'>
+            {% for field in form %}
+            {% if field.errors %}
+            <div>
+                <strong>{{ field.label }}</strong>
+                {{ field.errors }}
+            </div>
+            {% endif %}
+            {% endfor %}
+        </div>
+        {% endif %}        
+        <!-- 오류표시 End -->
+
+        <div class="mb-3">
+            <label for="subject" class="form-label">제목</label>
+            <input type="text" class="form-control" name="subject" id="subject" value="{{ form.subject.value | default_if_none:'' }}">
+            <!-- {{ form.subject.value | default_if_none:'' }} : 오류가 발생했을 경우 기존에 입력했던 값을 유지 -->
+            <!-- default_if_none:'' 폼 데이터(form.subject.value)에 값이 없을 경우 None이라는 문자열이 표시되는데  None대신 공백으로 표시하라는 의미의 템플릿 필터 -->
+        </div>
+        <div class="mb-3">
+            <label for="content" class="form-label">내용</label>
+            <textarea class="form-control" name="content" id="content" rows="10">{{ form.content.value | default_if_none:'' }}</textarea>
+        </div>
+        <!-- 수동으로 폼 HTML 작성하기 End -->
         <button type="submit" class="btn btn-primary">저장하기</button>
     </form>
 </div>
