--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -28,10 +28,26 @@
         </div>
     {% endfor %}
 
-    <form action="{% url 'pybo:answer_create' question.id %}" method='post'>
+    <form action="{% url 'pybo:answer_create' question.id %}" method='post' class='my-3'>
         {% csrf_token %}
         <!-- form으로 전송한 데이터가 실제 웹 페이지에서 작성한 데이터인지를 판단해 주는 가늠자 역할을 한다.
         csrf토큰을 사용하기위해서는 미들웨어가 필요한데 Django에는 이미 MIDDLWARE가 settings에 포함되어있기 때문에 별도로 추가할 필요는 없다.-->
+
+        <!-- 오류표시 Start -->
+        {% if form.errors %}
+        <div class="alert alert-danger" role="alert">
+            {% for field in form %}
+            {% if field.errors %}
+            <div>
+                <strong>{{ field.label }}</strong>
+                {{ field.errors }}
+            </div>
+            {% endif %}
+            {% endfor %}
+        </div>
+        {% endif %}
+        <!-- 오류표시 End -->
+
         <div class='form-group'>
             <textarea name='content' id='content' row='10' class='form-control'></textarea>
         </div>
