--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -1,16 +1,21 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class='container my-3'>
+    <!-- 질문 -->
     <h2 class='border-bottom py-2'>{{ question.subject }}</h2>
 
     <div class='card my-3'>
-        <div class='card-text' style='white-space: pre-line;'>{{ question.content }}</div>
-        <div class='d-flex justify-content-end'>
-            <div class='badge badge-light p-2'>
-                {{ question.create_date }}
+        <div class="card-body">
+            <div class='card-text' style='white-space: pre-line;'>{{ question.content }}</div>
+            <div class='d-flex justify-content-end'>
+                <div class='badge badge-light text-dark p-2'>
+                    {{ question.create_date }}
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- 답변 -->
 
     <h5 class='border-bottom my-3 py-2'>{{ question.answer_set.count }}개의 답변이 있습니다.</h5>
  
@@ -19,7 +24,7 @@
             <div class='card-body'>
                     <div class='card-text' style='white-space: pre-line;'>{{ answer.content }}</div>
                     <div class='d-flex justify-content-end'>
-                        <div class='badge badge-light p-2'>
+                        <div class='badge badge-light text-dark p-2'>
                             {{ answer.create_date }}
                         </div>
                     </div>
@@ -49,7 +54,7 @@
         <!-- 오류표시 End -->
 
         <div class='form-group'>
-            <textarea name='content' id='content' row='10' class='form-control'></textarea>
+            <textarea name='content' id='content' rows='10' class='form-control'></textarea>
         </div>
         <input type='submit' vale='답변등록' class='btn btn-primary'>
     </form>
