--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -52,6 +52,7 @@
         </div>
         {% endif %}
         <!-- 오류표시 End -->
+        <!-- {% include "form_errors.html" %}로 대체가능-->
 
         <div class='form-group'>
             <textarea name='content' id='content' rows='10' class='form-control'></textarea>
