로그인&로그아웃

--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -52,12 +52,13 @@
         </div>
         {% endif %}
         <!-- 오류표시 End -->
-        <!-- {% include "form_errors.html" %}로 대체가능-->
+        <!-- {% include "form_errors.html" %}
+        <!-- 로 대체가능-->
 
         <div class='form-group'>
             <textarea name='content' id='content' rows='10' class='form-control'></textarea>
         </div>
-        <input type='submit' vale='답변등록' class='btn btn-primary'>
+        <input type='submit' valUe='답변등록' class='btn btn-primary'>
     </form>
 </div>
 {% endblock %}
