--- a/templates/pybo/question_form.html
+++ b/templates/pybo/question_form.html
@@ -25,7 +25,8 @@
         </div>
         {% endif %}        
         <!-- 오류표시 End -->
-        <!-- {% include "form_errors.html" %}로 대체가능-->
+        <!-- {% include "form_errors.html" %}
+        <!-- 로 대체가능-->
 
         <div class="mb-3">
             <label for="subject" class="form-label">제목</label>
