--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -8,8 +8,9 @@
         <div class="card-body">
             <div class='card-text' style='white-space: pre-line;'>{{ question.content }}</div>
             <div class='d-flex justify-content-end'>
-                <div class='badge badge-light text-dark p-2'>
-                    {{ question.create_date }}
+                <div class='badge badge-light text-dark p-2 text-start'>
+                    <div class="mb-2">{{ question.author.username }}</div>
+                    <div>{{ question.create_date }}</div>s
                 </div>
             </div>
         </div>
@@ -24,8 +25,9 @@
             <div class='card-body'>
                     <div class='card-text' style='white-space: pre-line;'>{{ answer.content }}</div>
                     <div class='d-flex justify-content-end'>
-                        <div class='badge badge-light text-dark p-2'>
-                            {{ answer.create_date }}
+                        <div class='badge badge-light text-dark p-2 text-start'>
+                            <div class="mb-2">{{ answer.author.username }}</div>
+                            <div>{{ answer.create_date }}</div>
                         </div>
                     </div>
                 </div>
@@ -55,8 +57,9 @@
         <!-- {% include "form_errors.html" %}
         <!-- 로 대체가능-->
 
-        <div class='form-group'>
-            <textarea name='content' id='content' rows='10' class='form-control'></textarea>
+        <div class='mb-3'>
+            <label for="content" class="form-label">답변내용</label>
+            <textarea {% if not user.is_authenticated %}disabled{% endif %} name='content' id='content' rows='10' class='form-control'></textarea>
         </div>
         <input type='submit' valUe='답변등록' class='btn btn-primary'>
     </form>
