--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -7,18 +7,23 @@
 <div class='container my-3'>
     <table class='table'>
         <thead>
-            <tr class='thead-dark'>
+            <tr class='text-center table-dark'>
                 <th>번호</th>
-                <th>제목</th>
+                <th style="width:50%">제목</th>
+                <th>글쓴이</th>
                 <th>작성일시</th>
             </tr>
         </thead>
         <tbody>                        
             {% if question_list %}
                 {% for question in question_list %}
-                <tr>
-                    <td>{{ question_list.paginator.count|sub:question_list.start_index|sub:forloop.counter|add:1 }}</td>
+                <tr class="text-center">
                     <td>
+                        <!-- 번호 = 전체건수 - 시작인덱스 - 현재인덱스 + 1 
+                        글의 id를 쓰면 중간에 글이 사라질경우 번호가 꼬일 수 있음. -->
+                        {{ question_list.paginator.count|sub:question_list.start_index|sub:forloop.counter|add:1 }}
+                    </td>
+                    <td class="text-start">
                         <!-- <a href='/pybo/{{ question.id }}/'>{{ question.subject }}</a>
                         이렇게 하드코딩하면 나중에 페이지 구조가 바뀌어 url이 바뀌면 일일이 찾아서 변경해주어야 한다. -->
                         <a href='{% url 'pybo:detail' question.id %}'>{{ question.subject }}</a>
@@ -26,12 +31,14 @@
                             <span class="text-danger small mx-2">{{ question.answer_set.count }}</span>
                         {% endif %}
                     </td>
+                    <!-- 글쓴이 추가 -->
+                    <td>{{ question.author.username }}</td>
                     <td>{{ question.create_date }}</td>
                 </tr>
                 {% endfor %}
             {% else %}
                 <tr>
-                    <td colspan='3'>질문이 없습니다.</td>
+                    <td colspan='4'>질문이 없습니다.</td>
                 </tr>
             {% endif %}
         </tbody>
