--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class='container my-3'>
+    <!-- message 표시 : 비정상적인 방법으로 질문을 수정할 경우 대비 -->
+    {% if messages %}
+    <div class="alert alert-danger my-3" role="alert">
+        {% for message in messages %}
+        <strong>{{ message.tags }}</strong>
+        <ul><li>{{ message.message}}</li></ul>
+        {% endfor %}
+    </div>
+    {% endif %}
     <!-- 질문 -->
     <h2 class='border-bottom py-2'>{{ question.subject }}</h2>
 
@@ -8,10 +17,36 @@
         <div class="card-body">
             <div class='card-text' style='white-space: pre-line;'>{{ question.content }}</div>
             <div class='d-flex justify-content-end'>
+                <!-- 수정일자 표시 -->
+                {% if question.modify_date %}
+                <div class="badge bg-light text-dark p-2 text-start mx-3">
+                    <div class="mb-2">modifyed at</div>
+                    <div>{{ question.modify_date }}</div>
+                </div>
+                {% endif %}
                 <div class='badge badge-light text-dark p-2 text-start'>
                     <div class="mb-2">{{ question.author.username }}</div>
-                    <div>{{ question.create_date }}</div>s
+                    <div>{{ question.create_date }}</div>
                 </div>
+            </div>
+            <div class="my-3">
+                {% if request.user == question.author %}
+                <a href="{% url 'pybo:question_modify' question.id %}" class="btn btn-sm btn-outline-secondary">수정</a>
+
+                <a href="javascript:void(0)" class="delete btn btn-sm btn-outline-secondary" data-uri="{% url 'pybo:question_delete' question.id %}">삭제</a>
+<!--
+    href속성값이 javascript:void(0)이면 해당 링크를 클릭해도 아무런 동작도 하지 않는다.
+-->
+<!--
+    삭제 버튼이 눌리는 이벤트를 확인할 수 있도록 class속성에 "delete"항목을 추가했다.
+-->
+<!--
+    data=uri 속성은 자바스크립트에서 클릭 이벤트 발생시 this.dataset.uri와 같이 사용하여 그 값을 얻을 수 있다.
+-->
+<!-- 
+    삭제 버튼을 클릭했을때 확인창을 띄우기 위해 속성을 다음과 같이 설정했다.
+-->
+                {% endif %}                
             </div>
         </div>
     </div>
@@ -25,11 +60,25 @@
             <div class='card-body'>
                     <div class='card-text' style='white-space: pre-line;'>{{ answer.content }}</div>
                     <div class='d-flex justify-content-end'>
+                        <!-- 수정일자 표시 -->
+                        {% if answer.modify_date %}
+                        <div class="badge bg-light text-dark p-2 text-start mx-3">
+                            <div class="mb-2">modified at</div>
+                            <div>{{ answer.modify_date }}</div>
+                        </div>
+                        {% endif %}
                         <div class='badge badge-light text-dark p-2 text-start'>
                             <div class="mb-2">{{ answer.author.username }}</div>
                             <div>{{ answer.create_date }}</div>
                         </div>
                     </div>
+                </div>
+                <div class="my-3">
+                    {% if request.user == answer.author %}
+                    <a href="{% url 'pybo:answer_modify' answer.id %}" class="btn btn-sm btn-outline-secondary">수정</a>
+
+                    <a href="#" class="delete btn btn-sm btn-outline-secondary" data-uri="{% url 'pybo:answer_delete' answer.id %}">삭제</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -64,4 +113,17 @@
         <input type='submit' valUe='답변등록' class='btn btn-primary'>
     </form>
 </div>
+{% endblock %}
+
+{% block script %}
+<script type='text/javascript'>
+    const delete_elements = document.getElementsByClassName("delete");
+    Array.from(delete_elements).forEach(function(element) {
+        element.addEventListener('click', function() {
+            if(confirm("정말로 삭제하시겠습니까?")) {
+                location.href = this.dataset.uri;
+            }
+        })
+    })
+</script>
 {% endblock %}
