--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -57,26 +57,27 @@
     <h5 class='border-bottom my-3 py-2'>{{ question.answer_set.count }}개의 답변이 있습니다.</h5>
  
     {% for answer in question.answer_set.all %}
-    <a id="answer_{{ answer.id }}"></a>
+    
+    <a id="answer_{{ answer.id }}"></a> <!-- 앵커 -->
         <div class='card my-3'>
             <div class='card-body'>
-                    <div class='card-text' style='white-space: pre-line;'>{{ answer.content }}</div>
-                    <div class='d-flex justify-content-end'>
-                        <!-- 수정일자 표시 -->
-                        {% if answer.modify_date %}
-                        <div class="badge bg-light text-dark p-2 text-start mx-3">
-                            <div class="mb-2">modified at</div>
-                            <div>{{ answer.modify_date }}</div>
-                        </div>
-                        {% endif %}
-                        <div class='badge badge-light text-dark p-2 text-start'>
-                            <div class="mb-2">{{ answer.author.username }}</div>
-                            <div>{{ answer.create_date }}</div>
-                        </div>
+                <div class='card-text' style='white-space: pre-line;'>{{ answer.content }}</div>
+                <div class='d-flex justify-content-end'>
+                    <!-- 수정일자 표시 -->
+                    {% if answer.modify_date %}
+                    <div class="badge bg-light text-dark p-2 text-start mx-3">
+                        <div class="mb-2">modified at</div>
+                        <div>{{ answer.modify_date }}</div>
                     </div>
-                </div>
+                    {% endif %}
+                    <div class='badge badge-light text-dark p-2 text-start'>
+                        <div class="mb-2">{{ answer.author.username }}</div>
+                        <div>{{ answer.create_date }}</div>
+                    </div>
+                </div>                
                 <div class="my-3">
                     <a href="javascript:void(0)" class="recommend btn btn-sm btn-outline-secondary" data-uri="{% url 'pybo:answer_vote' answer.id %}">추천<span class="badge rounded-pill bg-success">{{ answer.voter.count }}</span></a>
+
                     {% if request.user == answer.author %}
                     <a href="{% url 'pybo:answer_modify' answer.id %}" class="btn btn-sm btn-outline-secondary">수정</a>
 
@@ -108,11 +109,11 @@
         <!-- 오류표시 End -->
         <!-- {% include "form_errors.html" %}
         <!-- 로 대체가능-->
-
         <div class='mb-3'>
+            
             <label for="content" class="form-label">답변내용</label>
             <textarea {% if not user.is_authenticated %}disabled{% endif %} name='content' id='content' rows='10' class='form-control'></textarea>
-        </div>
+        </div>        
         <input type='submit' valUe='답변등록' class='btn btn-primary'>
     </form>
 </div>
