--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load pybo_filter %}
 {% block content %}
 <div class='container my-3'>
     <!-- message 표시 : 비정상적인 방법으로 질문을 수정할 경우 대비 -->
@@ -15,7 +16,7 @@
 
     <div class='card my-3'>
         <div class="card-body">
-            <div class='card-text' style='white-space: pre-line;'>{{ question.content }}</div>
+            <div class='card-text'>{{ question.content|mark }}</div>
             <div class='d-flex justify-content-end'>
                 <!-- 수정일자 표시 -->
                 {% if question.modify_date %}
@@ -61,7 +62,7 @@
     <a id="answer_{{ answer.id }}"></a> <!-- 앵커 -->
         <div class='card my-3'>
             <div class='card-body'>
-                <div class='card-text' style='white-space: pre-line;'>{{ answer.content }}</div>
+                <div class='card-text'>{{ answer.content|mark }}</div>
                 <div class='d-flex justify-content-end'>
                     <!-- 수정일자 표시 -->
                     {% if answer.modify_date %}
